<resources>
    <string name="app_name">Farmket</string>
    <string name="moto">Taking agriculture to a new experience.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Farm">FARM</string>
    <string name="Ket">KET</string>

    <string name="tagLine">The heart of farmers</string>
    <string name="introduction">"It's been said from the very onset of the human civilization that humans are the greatest assets of this world. What we believe at Farmket is, that not only they're the greatest but the most productive beings ever! By keeping this in mind, we've designed a platform full of the most productive and greatest humankind possible!"</string>
    <string name="mission">
        A great man once said, \"Work today as you\'ve to die tomorrow\" and we at Farmket are
        the greatest believers of that philosophy! We are at a mission to completely transform the
        Agriculture Industry in India to a whole new level generating wealth and prosperity among the
        farmers and whole of the Industry! We consider our MISSION as our OBSESSION.</string>

    <string name="promise">We deliver a whole new level of customer experience in Agriculture never ever experienced before in the Industry! Our promise is to keep the experience to the highest level possible!</string>

    <string name="conclusion">We strive each and everyday to be better than our past self and we constantly improve the degree of work quality. We look forward to serve you the best and have a great experience ahead with Farmket! Thank You For Being With Us!
        Team Farmket</string>

    <string name="Address">info.farmket@gmail.com \nChandigarh,India \n8288974334</string>

    <string name="FAQ_intro">Getting Started or having trouble?\nCheck out some of the
        Frequently Asked Questions, you might get your answer here.</string>
    <string name="need_Help">Need Help?\nContact us!</string>

    <string name="suggestions">Have Suggestions for us?\nPlease, we would like to hear it!</string>

    <string name="contact_us">We take our commitment to our users seriously.\nIf you need
        our help with your user account, have questions about how to use our platform or
        are experiencing technical difficulties, please do not hesitate to contact us.</string>

    <string name="emailAdress">info.farmket@gmail.com</string>
    <string name="phoneNo">+918288974334</string>
    <string name="website">https://www.farmket.in/</string>

    <string name="suggestions_page">Looking for a particular UI components, templates,
        icons or maybe you have a cool idea for our brand and products? Let us know!</string>

    <string name="yt_channel">https://www.youtube.com/channel/UCiWhgTBA8VqSY7kMCZ7t7cg</string>

    <string name="map_search">https://www.google.com/maps/search/Farmket,+India/</string>
    <string name="title_activity_location">Map</string>
    <string name="description_for_element"><![CDATA[- 1 Healthy Live Plant Comes With Secure Packing \n-Safe & Quick Delivery by Amazon]]></string>

    <string name="services_for_machines">\n
        Summer Timings -> 05:00AM - 10:00PM\n
        Winter Timings -> 07:00AM - 8:00PM\n
\n
        No. of Tractor - 01\n
        No. of Machines - 01\n
        No. of Driver - 01\n
\n
        Rates Unit - per Bigha\n
        Mode of Pay - Online\n
    </string>

</resources>
